Created ingress mappings with specified service
