# api/routes.go
@@ -31,6 +31,7 @@ func RegisterAPIRoutes(router *gin.Engine, logger *logrus.Logger) {
 		apiV1.GET("/services/:namespace", kubeHandler.GetServices)
 		apiV1.GET("/services/:namespace/:service", kubeHandler.GetServiceDetails)
 		apiV1.GET("/ingress/:namespace", kubeHandler.GetIngress)
+		apiV1.GET("/services/mappings/ingress/:namespace/:service", kubeHandler.GetServiceMappingWithIngress)
 		apiV1.GET("/namespaces", kubeHandler.GetNamespaces)
 	}
 
